[gd_scene load_steps=2 format=3 uid="uid://cr71v5fyuafpu"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main_script"]
[ext_resource type="PackedScene" uid="uid://ckmrwxo5jjf8w" path="res://scenes/Map.tscn" id="2_map_scene"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main_script")

[node name="Map" parent="." instance=ExtResource("2_map_scene")]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="CrateContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="AmmoLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "Ammo: 20"

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="MGRSLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -180.0
offset_right = 150.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "37U DB 13224 79170"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FireButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
disabled = true
text = "FIRE"

[node name="GameOverPanel" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER
Final Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CrateSpawnTimer" type="Timer" parent="."]
wait_time = 12.0
autostart = true
